--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Elisa Xi Chen
 middle_name: 
-last_name: (she/her)
+last_name: 
 email: xchen97@uchicago.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
