add push to branch

--- a/flat.yaml
+++ b/flat.yaml
@@ -30,8 +30,9 @@ postprocess:
 # This section tells Flat Data to commit the resulting files back to the repository.
 commit:
   author_name: Movie Schedule Bot
-  author_email: bot@example.com
+  author_email: elisa.x.chen@gmail.com
   message: "Update movie schedules"
+  push_to_branch: main
   # We only need to commit the final, combined JSON file.
   files:
     - schedule.json
